<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <Toolbar
        android:id="@+id/toolBar"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:title="@string/settings"
        android:navigationIcon="@drawable/ic_arrow"
        android:contentInsetStartWithNavigation="64dp"
        android:titleTextAppearance="@style/SettingsActivityToolbarTitleStyle"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="61dp"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/default_padding"
        android:layout_marginTop="24dp">

        <TextView
            android:text="@string/dark_theme"
            style="@style/SettingsActivityTextStyle"/>

        <androidx.appcompat.widget.SwitchCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="15dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="61dp"
        android:orientation="horizontal"
        android:paddingStart="@dimen/default_padding">

        <TextView
            android:text="@string/share_app"
            style="@style/SettingsActivityTextStyle"/>

        <ImageView
            android:id="@+id/shareApplicationButton"
            android:src="@drawable/ic_share"
            style="@style/SettingsActivityIconStyle"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="61dp"
        android:orientation="horizontal"
        android:paddingStart="@dimen/default_padding">

        <TextView
            android:text="@string/contact_support"
            style="@style/SettingsActivityTextStyle"/>

        <ImageView
            android:id="@+id/contactSupportButton"
            style="@style/SettingsActivityIconStyle"
            android:src="@drawable/ic_support" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="61dp"
        android:orientation="horizontal"
        android:paddingStart="@dimen/default_padding">

        <TextView
            android:text="@string/user_agreement"
            style="@style/SettingsActivityTextStyle"/>

        <ImageView
            android:id="@+id/userAgreementButton"
            style="@style/SettingsActivityIconStyle"
            android:src="@drawable/ic_arrow_forward" />

    </LinearLayout>

</LinearLayout>