<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="?attr/backgroundColor">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingTop="14dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textSize="@dimen/big_text_size"
            android:fontFamily="@font/ys_display_medium"
            android:textFontWeight="500"
            android:textColor="@color/white"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingBottom="28dp"
        android:orientation="vertical">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/bSearch"
            style="@style/MainActivityButtonStyle"
            android:layout_marginTop="24dp"
            android:text="@string/search"
            app:icon="@drawable/ic_search" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/bLibrary"
            app:cornerRadius="@dimen/corner_radius"
            android:text="@string/library"
            app:icon="@drawable/ic_library"
            android:layout_marginTop="@dimen/default_padding"
            style="@style/MainActivityButtonStyle"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/bSettings"
            android:layout_marginTop="@dimen/default_padding"
            app:icon="@drawable/ic_settings"
            android:text="@string/settings"
            style="@style/MainActivityButtonStyle"/>

    </LinearLayout>

</LinearLayout>
